--- a/about.html
+++ b/about.html
@@ -8,8 +8,9 @@
   <meta name="description" content="Welcome to the most extraordinary hotel in Boston Massachussetts">
   </meta>
   <meta name="keywords" content="Hotel,Boston Hotel,New England Hotel">
-  <link rel="stylesheet" href="css/style.css">
   <script src="https://kit.fontawesome.com/d89b79d8ff.js"></script>
+  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" media="screen and (max-width:768px)" href="css/mobile.css">
   <title>Hotel BT | About</title>
 </head>
 
@@ -24,7 +25,7 @@ and links to relevant info that changes with time. -->
       <div class="container">
         <h1 class="logo"><a href="index.html">HBT</a></h1>
         <ul>
-          <li><input type="search"><i class="fas fa-search"></i></a></li>
+          <!-- <li><input type="search"><i class="fas fa-search"></i></a></li> -->
           <li><a href="index.html">Home</a></li>
           <li><a class="current" href="about.html">About</a></li>
           <li><a href="contact.html">Contact</a></li>
