--- a/contact.html
+++ b/contact.html
@@ -6,8 +6,9 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <meta name="description" content="Welcome to the most extraordinary hotel in Boston Massachussetts"></meta>
   <meta name="keywords" content="Hotel,Boston Hotel,New England Hotel">
-  <link rel="stylesheet" href="css/style.css">
   <script src="https://kit.fontawesome.com/d89b79d8ff.js"></script>
+  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" media="screen and (max-width:768px)" href="css/mobile.css">
   <title>Hotel BT | Contact</title>
 </head>
 <body>
@@ -21,7 +22,7 @@ and links to relevant info that changes with time. -->
       <div class="container">
         <h1 class="logo"><a href="index.html">HBT</a></h1>
         <ul>
-          <li><input type="search"><i class="fas fa-search"></i></a></li>
+          <!-- <li><input type="search"><i class="fas fa-search"></i></a></li> -->
           <li><a href="index.html">Home</a></li>
           <li><a href="about.html">About</a></li>
           <li><a class="current" href="contact.html">Contact</a></li>
